# musium

./: .editorconfig  .env  .gitignore  .gitmodules  Cargo.toml  README.MD  README.md  diesel.toml  test.ps1
.cargo/: config  config.toml
audio/: Cargo.toml
audio/src/: lib.rs
audio_output/: Cargo.toml
audio_output/src/: lib.rs
audio_output_kira/: Cargo.toml
audio_output_kira/src/: lib.rs
audio_output_local/: Cargo.toml
audio_output_local/src/: lib.rs
audio_output_rodio/: Cargo.toml
audio_output_rodio/src/: lib.rs
backend/: Cargo.toml
backend/migrations/2020-02-15-125535_initial/: down.sql
backend/src/: database.rs  lib.rs  model.rs  sync.rs
backend/src/database/: album.rs  artist.rs  local_track.rs  playback.rs  spotify_track.rs  sync.rs  track.rs  user.rs
backend/src/database/source/: local.rs  spotify.rs
backend/src/database/sync/: local.rs  spotify.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs
client_http/: Cargo.toml
client_http/src/: lib.rs
code/backend/: Cargo.toml
code/backend/src/: lib.rs  model.rs  password.rs  scanner.rs
code/client/: Cargo.toml
code/client/src/: client.rs  main.rs
code/core/: Cargo.toml
code/core/src/: lib.rs  model.rs
code/server/: Cargo.toml
code/server/src/: api.rs  auth.rs  lib.rs  main.rs  model.rs  scanner.rs  schema.rs  serve.rs
core/: Cargo.toml
core/src/: api.rs  error.rs  format_error.rs  lib.rs  panic.rs  untagged_result.rs
core/src/model/: collection.rs  mod.rs
filesystem_sync/: Cargo.toml
filesystem_sync/src/: lib.rs
gui/: Cargo.toml
gui/src/: app.rs  main.rs  util.rs
gui/src/page/: login.rs  main.rs  mod.rs  track.rs
gui/src/page/main/: mod.rs  source.rs  track.rs  tracks.rs
gui/src/widget/: table.rs
migrations/2020-02-15-125535_initial/: down.sql  up.sql
musium_audio/: Cargo.toml
musium_audio/src/: lib.rs
musium_backend/: Cargo.toml
musium_backend/migrations/2020-02-15-125535_initial/: down.sql  up.sql
musium_backend/src/: database.rs  lib.rs  model.rs  scanner.rs
musium_backend/src/database/: artist.rs  local_track.rs  mod.rs  scan.rs  source.rs  spotify_track.rs  sync.rs  track.rs  user.rs
musium_backend/src/database/source/: local.rs  spotify.rs
musium_backend/src/database/sync/: local.rs  mod.rs  spotify.rs
musium_backend/src/sync/: local.rs  mod.rs  spotify.rs
musium_cli/: Cargo.toml
musium_cli/src/: main.rs
musium_client/: Cargo.toml
musium_client/src/: client.rs  lib.rs  main.rs
musium_core/: Cargo.toml
musium_core/src/: api.rs  lib.rs  schema.rs
musium_core/src/model/: mod.rs
musium_filesystem_sync/: Cargo.toml
musium_reqwest_util/: Cargo.toml
musium_reqwest_util/src/: lib.rs
musium_server/: Cargo.toml
musium_server/src/: api.rs  auth.rs  main.rs  scanner.rs  serve.rs  sync.rs  util.rs
musium_spotify/: Cargo.toml
musium_spotify_sync/: Cargo.toml
musium_spotify_sync/src/: lib.rs
player/: Cargo.toml
player/src/: lib.rs  player.rs  worker_task.rs
server/: Cargo.toml
server/src/: api.rs  auth.rs  main.rs  serve.rs  sync.rs
spotify_client/: Cargo.toml
spotify_client/src/: lib.rs
tui/: Cargo.toml
tui/src/: app.rs  main.rs  nav.rs  tui.rs  ui.rs  util.rs
