cargo-features = ["named-profiles", "profile-overrides"]

[workspace]
members = [
  "core",
  "spotify_client",
  "filesystem_sync",
  "backend",
  "server",
  "client",
  "audio",
  "cli",
  "gui"
]

# Development profile: full debug information, no optimisations.
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
panic = "abort"
debug = true
codegen-units = 8
lto = false
incremental = true
[profile.dev.package.backtrace] # Fully optimize backtrace crate to speed up backtrace collection
opt-level = 3

# Fast development profile: no debug information, more optimisations.
[profile.fastdev]
inherits = 'dev'
opt-level = 2
debug = false
# Fully optimize all dependencies, but not our own crates, to speed up compilation.
[profile.fastdev.package."*"]
opt-level = 3
[profile.fastdev.package."musium_core"]
opt-level = 2
[profile.fastdev.package."musium_spotify_client"]
opt-level = 2
[profile.fastdev.package."musium_filesystem_sync"]
opt-level = 2
[profile.fastdev.package."musium_backend"]
opt-level = 2
[profile.fastdev.package."musium_server"]
opt-level = 2
[profile.fastdev.package."musium_client"]
opt-level = 2
[profile.fastdev.package."musium_audio"]
opt-level = 2
[profile.fastdev.package."musium_cli"]
opt-level = 2
[profile.fastdev.package."musium_gui"]
opt-level = 2

[profile.test]
inherits = 'fastdev'

# Release profile: full optimisations, including link-time optimisations.
[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = true
debug = false
