cargo-features = ["named-profiles", "profile-overrides"]

[workspace]
members = [
  "core",
  "spotify_client",
  "filesystem_sync",
  "backend",
  "server",
  "client",
  "client_http",
  "audio_output",
  "audio_output_kira",
  "audio_output_rodio",
  "player",
  "cli",
  "gui"
]
resolver = "2"

[patch.crates-io]
iced = { path = "gui/iced" }
iced_native = { path = "gui/iced/native" }
iced_graphics = { path = "gui/iced/graphics" }

# Development profile: no debug information, some optimisations.
[profile.dev]
panic = "abort"
opt-level = 2
debug = false
# Fully optimize all dependencies, but not our own crates, to speed up compilation.
[profile.dev.package."*"]
opt-level = 3

# Testing: same as development profile.
[profile.test]
inherits = "dev"

# Debug profile: full debug information, no optimisations.
[profile.dbg]
inherits = "dev"
opt-level = 0
debug = true
panic = "unwind"

# Release profile: full optimisations, including link-time optimisations.
[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = true
debug = false

# Performance profiling profile: full debug information, full optimisations.
[profile.profile]
inherits = "release"
debug = true
