cargo-features = ["profile-overrides"]

[workspace]
members = [
  "core",
  "spotify_client",
  "filesystem_sync",
  "backend",
  "server",
  "client",
  "client_http",
  "audio_output",
  "audio_output_kira",
  "audio_output_rodio",
  "player",
  "cli",
  "gui"
]
resolver = "2"

[patch.crates-io]
iced = { path = "gui/iced" }
iced_native = { path = "gui/iced/native" }
iced_graphics = { path = "gui/iced/graphics" }
