[package]
name = "musium_audio_output_rodio"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
musium_core = { path = "../core" }
musium_audio_output = { path = "../audio_output" }
rodio = "0.13"
crossbeam-channel = "0.5"
futures = "0.3"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"

