[package]
name = "musium_backend"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
musium_core = { path = "../core" }
musium_filesystem_sync = { path = "../filesystem_sync" }
musium_spotify_client = { path = "../spotify_client" }
diesel = { version = "1", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = ">=0.8.0, <0.18.0", features = ["bundled"] } # Make diesel use bundled sqlite.
chrono = "0.4"
rust-argon2 = "0.8"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = "1"
itertools = "0.10"
thiserror = "1"
metrics = "0.12"
tracing = "0.1"
tracing-futures = "0.2"
