[package]
name = "musium_cli"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
musium_core = { path = "../core" }
musium_player = { path = "../player" }
structopt = "0.3"
dotenv = "0.15"
open = "1.4"
tokio = { version = "1", features = ["rt"], default-features = false }
anyhow = "1"
thiserror = "1"
metrics-core = "0.5"
metrics-runtime = { version = "0.13", default-features = false }
metrics-observer-yaml = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
