[package]
name = "musium_client"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
musium_core = { path = "../core" }
reqwest = { version = "0.11", features = ["cookies", "json", "gzip"] }
url = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
