[package]
name = "musium_client_http"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
musium_core = { path = "../core", features = ["serde"] }
musium_client = { path = "../client" }
reqwest = { version = "0.11", features = ["cookies", "json", "gzip"] }
url = "2"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
thiserror = "1"
