[package]
name = "musium_core"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
diesel = { version = "1", features = ["chrono"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10"
thiserror = "1"
