[package]
name = "musium_gui"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
musium_core = { path = "../core" }
musium_player = { path = "../player" }
iced = { version = "0.2.0", features = ["tokio", "debug"] }
iced_graphics = "0.1.0"
iced_native = "0.3.0"
tokio = { version = "1", features = ["rt", "time"], default-features = false }
url = "2"
structopt = "0.3"
dotenv = "0.15"
itertools = "0.10"
anyhow = "1"
thiserror = "1"
metrics-core = "0.5"
metrics-runtime = { version = "0.13", default-features = false }
metrics-observer-yaml = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"

