[package]
name = "musium_backend"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
musium_core = {path = "../musium_core"}
diesel = { version = "1", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = ">=0.8.0, <0.18.0", features = ["bundled"] } # Make diesel use bundled sqlite.
id3 = "0.5"
crc32fast = "1"
walkdir = "2"
rust-argon2 = "0.8"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
itertools = "0.8"
thiserror = "1"
metrics = "0.12"
tracing = "0.1"
