[package]
name = "musium_backend"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
musium_core = {path = "../musium_core"}
musium_filesystem_sync = {path = "../musium_filesystem_sync"}
musium_spotify_sync = {path = "../musium_spotify_sync"}
diesel = { version = "1", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = ">=0.8.0, <0.18.0", features = ["bundled"] } # Make diesel use bundled sqlite.
chrono = "0.4"
rust-argon2 = "0.8"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = "0.2"
itertools = "0.8"
thiserror = "1"
metrics = "0.12"
tracing = "0.1"
tracing-futures = "0.2"
