[package]
name = "musium_client"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
musium_core = {path = "../musium_core"}
musium_reqwest_util = {path = "../musium_reqwest_util"}
reqwest = { version = "0.10", features = ["cookies", "json", "gzip"] }
url = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
