[package]
name = "musium_spotify_sync"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reqwest = { version = "0.10", features = ["json", "gzip"] }
url = "2"
chrono = "0.4"
itertools = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-futures = "0.2"
