[package]
name = "musium_player"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
musium_core = { path = "../core" }
musium_client = { path = "../client" }
musium_client_http = { path = "../client_http", optional = true }
musium_audio_output = { path = "../audio_output" }
musium_audio_output_rodio = { path = "../audio_output_rodio", optional = true }
tokio = { version = "1", features = ["rt"], default-features = false }
thiserror = "1"

[features]
default = ["musium_client_http", "musium_audio_output_rodio"]
