[package]
name = "musium_player"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
musium_core = { path = "../core" }
musium_client = { path = "../client" }
musium_client_http = { path = "../client_http", optional = true }
musium_audio_output = { path = "../audio_output" }
musium_audio_output_kira = { path = "../audio_output_kira", optional = true }
tokio = { version = "1", features = ["rt", "macros"], default-features = false }
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"

[features]
default = ["default_player"]
default_player = ["musium_client_http", "musium_audio_output_kira"]
