[package]
name = "musium_server"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
musium_core = { path = "../core" }
musium_spotify_client = { path = "../spotify_client" }
musium_backend = { path = "../backend" }
actix-web = "= 4.0.0-beta.1"
actix-rt = "= 2.0.0-beta.1"
actix-files = "= 0.6.0-beta.1"
actix-http = "= 3.0.0-beta.1"
actix-tls = "= 3.0.0-beta.2"
actix-service = "= 2.0.0-beta.2"
actix-identity = { git = "https://github.com/andy128k/actix-extras.git", rev = "d7ac6473c7101088bcc448a74df6a0b2c19c6e1f" } # To work tokio 1. See: https://github.com/actix/actix-extras/issues/146
tokio = { version = "1", features = ["rt"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
dotenv = "0.15"
scopeguard = "1"
thiserror = "1"
anyhow = "1"
metrics-core = "0.5"
metrics-runtime = { version = "0.13", default-features = false }
metrics-observer-yaml = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
