[package]
name = "musium_server"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
musium_core = { path = "../core" }
musium_spotify_client = { path = "../spotify_client" }
musium_backend = { path = "../backend" }
actix-web = "= 4.0.0-beta.12"
actix-rt = "2.5.0"
actix-files = "0.6.0-beta.9"
actix-http = "3.0.0-beta.13"
actix-tls = "3.0.0-beta.9"
actix-utils = "= 3.0.0"
actix-service = "2.0.1"
actix-identity = "0.4.0-beta.4"
tokio = { version = "1", features = ["rt"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
dotenv = "0.15"
scopeguard = "1"
thiserror = "1"
anyhow = "1"
metrics-core = "0.5"
metrics-runtime = { version = "0.13", default-features = false }
metrics-observer-yaml = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
