[package]
name = "musium_spotify_client"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-futures = "0.2"
