[package]
name = "musium_tui"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
musium_core = { path = "../core" }
musium_client = { path = "../client" }
musium_audio = { path = "../audio" }
tui = { version = "0.10", features = ["crossterm"], default-features = false }
crossterm = "0.17"
structopt = "0.3"
dotenv = "0.15"
tokio = { version = "0.2", features = ["rt-threaded", "sync"], default-features = false }
itertools = "0.9"
anyhow = "1"
thiserror = "1"
metrics-core = "0.5"
metrics-runtime = { version = "0.13", default-features = false }
metrics-observer-yaml = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
