[package]
name = "client"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
core = {path = "../core"}
server = {path = "../server"}
rodio = "0.10"
structopt = "0.3"
anyhow = "1.0"
metrics-core = "0.5"
metrics-runtime = {version = "0.13", features = []}
metrics-observer-yaml = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
